0.02
 - Fix dependency to
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Remove List::MoreUtils from dependencies.
 - Remove Wikibase::Cache from dependencies.
 - Update copyright years.

0.01 2022-10-19T11:10:23+02:00
 - First version.