@@ -1,4 +1,5 @@
 Changes
+examples/create_and_print_value_globecoordinate.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
