@@ -1,4 +1,5 @@
 0.02
+ - Add doc for Wikibase::Datatype::Print::Value::Globecoordinate.
  - Fix dependency to
    Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
  - Remove List::MoreUtils from dependencies.
